--- a/package.json
+++ b/package.json
@@ -1,18 +1,29 @@
 {
-  "name": "fluxon_motos",
+  "name": "fluxon_motos_api",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
-    "dev": "nodemon --exec index.ts localhost 8080"
+    "dev": "nodemon --exec ts-node index.ts",
+    "build": "tsc"
   },
-  "keywords": [],
+  "keywords": [
+    "fluxon_motos",
+    "cars stats comparasion",
+    "cars stats comparator"
+  ],
   "author": "Filip_Fuks",
   "license": "ISC",
   "dependencies": {
     "dependency-env": "^0.1.1",
+    "express": "^4.18.2",
+    "mysql": "^2.18.1",
     "nodemailer": "^6.9.1",
-    "nodemon": "^2.0.20",
-    "typeorm": "^0.3.12"
+    "ts-node": "^10.9.1",
+    "typeorm": "^0.3.12",
+    "typescript": "^4.9.5"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.21"
   }
 }
