--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mysql": "^2.18.1",
     "nodemailer": "^6.9.1",
     "ts-node": "^10.9.1",
+    "tsoa": "^5.1.1",
     "typeorm": "^0.3.12",
     "typescript": "^4.9.5"
   },
